load("//bazel:mongo_src_rules.bzl", "idl_generator", "mongo_cc_library")

package(default_visibility = ["//src/mongo/db/modules/enterprise:__subpackages__"])

exports_files(
    glob([
        "*.h",
        "*.cpp",
    ]),
)

# TODO: add something like InjectStreamsThirdParty('mongocxx') to make this easier.
MONGOCXX_COPTS = [
    "-isystemsrc/mongo/db/modules/enterprise/src/streams/third_party/mongocxx/dist",
] + select({
    "@platforms//cpu:x86_64": [
        "-isystemsrc/mongo/db/modules/enterprise/src/streams/third_party/mongocxx/dist/platform/linux_x86_64",
    ],
    "@platforms//cpu:aarch64": [
        "-isystemsrc/mongo/db/modules/enterprise/src/streams/third_party/mongocxx/dist/platform/linux_aarch64",
    ],
    "//conditions:default": [],
})

idl_generator(
    name = "stages_gen",
    src = "stages.idl",
    deps = [
        "//src/mongo/db:basic_types_gen",
        "//src/mongo/db/pipeline:document_source_change_stream_gen",
        "//src/mongo/db/pipeline:document_source_merge_gen",
        "//src/mongo/db/pipeline:name_expression_gen",
        "//src/mongo/db/timeseries:timeseries_gen",
    ],
)

idl_generator(
    name = "exec_internal_gen",
    src = "exec_internal.idl",
    deps = [
        "//src/mongo/db:basic_types_gen",
        "//src/mongo/db/pipeline:value_gen",
    ],
)

idl_generator(
    name = "checkpoint_data_gen",
    src = "checkpoint_data.idl",
    deps = [
        ":exec_internal_gen",
        "//src/mongo/db:basic_types_gen",
    ],
)

idl_generator(
    name = "common_gen",
    src = "common.idl",
    deps = [
        "//src/mongo/db:basic_types_gen",
    ],
)

idl_generator(
    name = "config_gen",
    src = "config.idl",
    deps = [
        "//src/mongo/db:basic_types_gen",
    ],
)

mongo_cc_library(
    name = "streams_config_idl",
    srcs = [
        ":config_gen",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//src/mongo/db:server_base",
    ],
)

mongo_cc_library(
    name = "streams_exec_common_idl",
    srcs = [
        ":common_gen",
    ],
    deps = [
        "//src/mongo:base",
        "//src/mongo/client:clientdriver_minimal",
        "//src/mongo/idl:idl_parser",
    ],
)

mongo_cc_library(
    name = "streams_exec_internal_idl",
    srcs = [
        "checkpoint_data_gen",
        "exec_internal_gen",
    ],
    deps = [
        "//src/mongo:base",
        "//src/mongo/client:clientdriver_minimal",
        "//src/mongo/idl:idl_parser",
    ],
)

mongo_cc_library(
    name = "streams_stages_idl",
    srcs = [
        "stages_gen",
    ],
    deps = [
        "//src/mongo:base",
        "//src/mongo/client:clientdriver_minimal",
        "//src/mongo/db/pipeline:aggregation_request_helper",
        "//src/mongo/db/pipeline:document_sources_idl",
        "//src/mongo/idl:idl_parser",
    ],
)

mongo_cc_library(
    name = "streams_exec_util",
    srcs = [
        "document_timestamp_extractor.cpp",
        "event_deserializer.cpp",
        "json_event_deserializer.cpp",
        "source_buffer_manager.cpp",
    ],
    hdrs = [
        "document_timestamp_extractor.h",
        "event_deserializer.h",
        "json_event_deserializer.h",
        "mongocxx_utils.h",
        "source_buffer_manager.h",
        ":stages_gen",
    ],
    copts = MONGOCXX_COPTS,
    deps = [
        "//src/mongo:base",
        "//src/mongo/db:query_expressions",
        "//src/mongo/db/modules/enterprise/src/streams/third_party/mongocxx",
        "//src/mongo/db/modules/enterprise/src/streams/util:streams_util",
        "//src/third_party/libbson:bson",
    ],
)
