load("//bazel:mongo_src_rules.bzl", "mongo_cc_library")

package(default_visibility = ["//visibility:public"])

exports_files(
    glob([
        "*.h",
        "*.cpp",
    ]),
)

mongo_cc_library(
    name = "streams_util",
    srcs = [
        "exception.cpp",
        "metric_manager.cpp",
        "metrics.cpp",
    ],
    hdrs = [
        "exception.h",
        "metric_manager.h",
        "metrics.h",
        "//src/mongo/util:histogram.h",
    ],
    deps = [
        "//src/mongo:base",
    ],
)
