load("//bazel:mongo_src_rules.bzl", "mongo_cc_library")

package(default_visibility = ["//src/mongo/db/modules/enterprise:__subpackages__"])

exports_files(
    glob([
        "*.h",
        "*.cpp",
    ]),
)

mongo_cc_library(
    name = "streams_util",
    srcs = [
        "chunked_memory_aggregator.cpp",
        "concurrent_memory_aggregator.cpp",
        "exception.cpp",
        "metric_manager.cpp",
        "metrics.cpp",
        "string_validator.cpp",
    ],
    hdrs = [
        "chunked_memory_aggregator.h",
        "concurrent_memory_aggregator.h",
        "exception.h",
        "metric_manager.h",
        "metrics.h",
        "string_validator.h",
        "units.h",
        "//src/mongo/db/memory_tracking:memory_usage_tracker.h",
        "//src/mongo/util:histogram.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//src/mongo:base",
    ],
)
